--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,9 @@
 /* Font */
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 
-/*Global Styles*/
 
-*,
-::after,
-::before {
+
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -17,12 +15,7 @@ body {
   line-height: 1.5;
   font-size: 0.9rem;
 }
-ul {
-  list-style-type: none;
-}
-a {
-  text-decoration: none;
-}
+
 
 h2{
   letter-spacing: 0.1rem;
@@ -48,17 +41,6 @@ h2{
     line-height: 1;
   }
 }
-/*  global classes */
-
-
-main {
-  min-height: 100vh;
-  display: grid;
-  place-items: center;
-}
-
-
-/* Nav */
 
 
 nav {
